Add SYNC/STICKY soak benchmark + Linux results and optimization pass
- SoakRunner (--spring.profiles.active=soak): sustained closed-loop benchmark
  of SYNC vs ASYNC_STICKY on the loan-approval workflow with per-minute
  latency/throughput timeline; knobs -Dsoak.minutes/-Dsoak.submitters/-Dsoak.modes.
- loan-sync.json: SYNC-mode variant of the loan workflow.
- RESULTS.md: Linux constrained-topology run (2-core/4GB servers), 30+30 min
  soak (622k runs, 0 errors), bottleneck attribution (stock Postgres config,
  not the engine), and the validated optimization pass — STICKY p99.9 166→67ms,
  throughput knee ~300 runs/s (~85 runs/s per server core), server-CPU-bound.
- artifacts/: raw soak + validation logs and 10s telemetry CSVs.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>